<resources>
    <string name="app_name">Rover Sensors</string>
    <string name="go">Go!</string>
    <string name="mission_id_txt">Mission ID</string>
    <string name="loading">Loading...</string>
    <string name="select_mission">Select Mission</string>
    <string name="refresh">Refresh</string>
    <string name="planet_details">Planet Details</string>
    <string name="planet">Planet:</string>
    <string name="planet_name">Planet Name</string>
    <string name="type">Type:</string>
    <string name="planet_type">Planet Type</string>
    <string name="mass">Mass:</string>
    <string name="planet_mass">Planet Mass</string>
    <string name="radius">Radius:</string>
    <string name="planet_radius">Planet Radius</string>
    <string name="planet_flux">Planet Flux</string>
    <string name="flux">Flux:</string>
    <string name="teq">Teq:</string>
    <string name="planet_teq">Planet Teq</string>
    <string name="period">Period:</string>
    <string name="planet_period">Planet Period</string>
    <string name="distance">Distance:</string>
    <string name="planet_distance">Planet Distance</string>
    <string name="esi">ESI:</string>
    <string name="planet_esi">Planet ESI</string>
    <string name="create_mission">Create Mission</string>
    <string name="enter_password">Enter Password:</string>
    <string name="password">Password</string>
    <string name="mission_start">Mission start:</string>
    <string name="mission_end">Mission end:</string>
    <string name="date_time_format">Y/m/d H:min:s</string>
    <string name="planet_id">Planet:</string>
    <string name="planet_id_hint">Planet ID</string>
    <string name="select_planet">Select Planet</string>
    <string name="nav_icon">Nav Icon</string>
    <string name="r_o_v_e_r_gr">R.O.V.E.R. GR</string>
    <string name="rover_email">rover2018gr@gmail.com</string>
    <string name="website_home">Website Home</string>
    <string name="contact_us">Contact us</string>
    <string name="select_host">Select Host:</string>
    <string name="host_domain">Host domain</string>
    <string name="shared_preferences_string">com.pliamdev.pliam.roversensors.host_pref</string>
    <string name="search">Search</string>
    <string name="search_mission">Search mission</string>
    <string name="more">More</string>
    <string name="host_ip">Host address</string>
    <string name="colorprimary_text">colorPrimary</string>
    <string name="primary_color_title">Primary Color</string>
    <string name="primary_color_summary">ActionBar background color</string>
    <string name="settings">Settings</string>
    <string name="colors_string_title">Colors</string>
    <string name="color_primary_dark">Color Primary Dark</string>
    <string name="primary_color_dark_title">Primary Color Dark</string>
    <string name="status_bar_background_color_summary">Status Bar background color</string>
    <string name="select_string">Select</string>
    <string name="select_start_date_time">Select Start Date Time</string>
    <string name="select_end_date_time">Select End Date Time</string>
    <string name="questionnaire_title">Questionnaire</string>
    <string name="planet_image_description">Planet Image</string>
    <string name="only_favorites_text">Only Favorites</string>
    <string name="voice_commands_string">Voice Commands</string>
    <string name="behavior_text">Behavior</string>
    <string name="quick_launch_notification_title">Quick Launch Notification</string>
    <string name="splash_icon_string">Splash Icon</string>
    <string name="rover_sensors_splash_title">Rover Sensors</string>
    <string name="mission_details_string">Mission Details</string>
    <string name="planet_habitability_text">Planet Habitability</string>
    <string name="habitability_but">Habitability:</string>
    <string-array name="host_array">
        <item>Web Host</item>
        <item>Other:</item>
    </string-array>
</resources>
