<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_web"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/web_home"
            android:title="@string/website_home" />
        <item
            android:id="@+id/nav_contact"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_questionnaire"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_questionnaire"
            android:title="@string/questionnaire_title" />
        <item
            android:id="@+id/nav_settings"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_mission_details"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_mission_details"
            android:title="@string/mission_details_string" />
    </group>
</menu>