<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".MissionSelect">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:theme="@style/ToolBarStyle" />

    <ScrollView
        android:background="@drawable/background_gradient_blue"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/colors_string_title"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/primary_card_view"
                android:background="@drawable/background_gradient_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                card_view:cardCornerRadius="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@drawable/background_gradient_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="240dp"
                            android:layout_height="100dp"
                            android:orientation="vertical"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="8dp">

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="20dp" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/primary_color_title"
                                android:textColor="@android:color/black"
                                android:textSize="15sp" />

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="20dp" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/primary_color_summary" />
                        </LinearLayout>

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="102dp"
                            android:layout_height="100dp">

                            <ImageView
                                android:id="@+id/primaryColorImage"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:contentDescription="@string/colorprimary_text"
                                android:focusable="true"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@color/colorPrimary" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/primary_dark_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                card_view:cardCornerRadius="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@drawable/background_gradient_blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="240dp"
                            android:layout_height="100dp"
                            android:orientation="vertical"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="8dp">

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="20dp" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/primary_color_dark_title"
                                android:textColor="@android:color/black"
                                android:textSize="15sp" />

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="20dp" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/status_bar_background_color_summary" />
                        </LinearLayout>

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="100dp"
                            android:layout_height="100dp">

                            <ImageView
                                android:id="@+id/primaryDarkColorImage"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:contentDescription="@string/color_primary_dark"
                                android:focusable="true"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@color/colorPrimaryDark" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/behavior_text"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
            <androidx.cardview.widget.CardView
                android:id="@+id/quick_launch_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                card_view:cardCornerRadius="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@drawable/background_gradient_blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Switch
                        android:id="@+id/quick_launch_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/quick_launch_notification_title"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>