<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_host"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:theme="@style/ToolBarStyle" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/host_coordinator"
        android:background="@drawable/background_gradient_blue"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/host_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/select_host"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/host_val"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/host_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/host_domain"
                app:layout_constraintBottom_toBottomOf="@+id/host_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/host_text"
                app:layout_constraintTop_toTopOf="@+id/host_text" />

            <EditText
                android:id="@+id/ip_val"
                android:background="@drawable/rounded_edittext"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/host_ip"
                android:inputType="textUri"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/host_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/hostFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="32dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/go_arrow" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>